# constitutional-seq

./: .gitignore  BIMBAM.EXCEL.audit.json  CLEANUP_PLAN.md  DATA_FLOW_ARCHITECTURE.md  HACKERNEWS_REVIEW_PLAN.md  LICENSE  PERFORMANCE_TEST_SUMMARY.md  README.md  auto_demo.py  cli_performance_report.md  create_demo.py  genbank.config.example.json  genbank_results1.audit.json  memory_benchmark.py  network_performance_report.md  package-lock.json  pax6_only.txt  performance_report.md  pyproject.toml  requirements.txt  setup.py  test_genes.txt  test_multi_genes.txt  test_multiple.txt  test_output.audit.json  test_output_complete.audit.json  test_output_final.audit.json  test_output_final_fixed.audit.json  test_output_new.audit.json  test_output_uniprot.audit.json  test_output_validated.audit.json  test_problematic.txt  test_problematic_output.audit.json  test_threshold.txt  test_threshold_multi.txt  test_uniprot_gene.txt
.memory_test_cache/: cache_metadata.json
.memory_test_cache/genes/: GENE_0.json  GENE_1.json  GENE_10.json  GENE_11.json  GENE_12.json  GENE_13.json  GENE_14.json  GENE_15.json  GENE_16.json  GENE_17.json  GENE_18.json  GENE_19.json  GENE_2.json  GENE_20.json  GENE_21.json  GENE_22.json  (+84 more)
.taskmaster/: state.json
docs/: error_handling.md  gui_features.md  gui_guide.md
examples/: error_handling_demo.py  gui_demo.py
test_performance/: genes_cached.txt  genes_large.txt  genes_medium.txt  genes_problematic.txt  genes_small.txt
tests/: test_batch_processor.py  test_cache_manager.py  test_cli_quiet_mode.py  test_cli_with_error_handling.py  test_config.py  test_data_validator.py  test_error_handler.py  test_gene_resolver.py  test_gene_resolver_uniprot.py  test_gui.py  test_import.py  test_input_parser.py  test_network_recovery.py  test_network_recovery_comprehensive.py  test_output_formatter.py  test_parallel_processor.py  test_rate_limiter.py  test_sequence_retriever.py  test_transcript_selector.py  test_uniprot_features.py
(+41 files in other folders)
