[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constitutional-seq"
version = "1.0.0"
description = "Automated NCBI GenBank CDS retrieval tool for mRNA therapeutic development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Austin P. Morrissey"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "click>=8.1.0",
    "openpyxl>=3.1.0",
    "biopython>=1.81",
    "PyQt5>=5.15.0",
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "urllib3>=1.26.0",
    "markdown>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
genbank-tool = "genbank_tool.cli_with_error_handling:main"
genbank-tool-legacy = "genbank_tool.cli:main"
genbank-tool-enhanced = "genbank_tool.cli_enhanced:main"
genbank-tool-gui = "genbank_tool.gui_app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=genbank_tool --cov-report=term-missing"